--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,22 +1,22 @@
 # See https://docs.ansible.com/ansible/latest/dev_guide/collections_galaxy_meta.html
 
-namespace: community
-name: FIXME
+namespace: tosin2013
+name: openshift-virt-ansible
 version: 0.1.0
 readme: README.md
 authors:
-  - YOUR NAME (github.com/YOURGITHUB)
+  - Tosin Akinosho (github.com/tosin2013)
 description: null
 license_file: LICENSE
 tags:
 # tags so people can search for collections https://galaxy.ansible.com/search
 # tags are all lower-case, no spaces, no dashes.
-  - example1
-  - example2
-repository: https://github.com/ansible-collections/community.REPO_NAME
-#documentation: https://github.com/ansible-collection-migration/community.REPO_NAME/tree/main/docs
-homepage: https://github.com/ansible-collections/community.REPO_NAME
-issues: https://github.com/ansible-collections/community.REPO_NAME/issues
+  - openshift-virtualization
+  - kubevirt
+repository: https://github.com/ansible-collections/tosin2013.openshift-virt-ansible
+#documentation: https://github.com/ansible-collection-migration/tosin2013.openshift-virt-ansible/tree/main/docs
+homepage: https://github.com/ansible-collections/tosin2013.openshift-virt-ansible
+issues: https://github.com/ansible-collections/tosin2013.openshift-virt-ansible/issues
 build_ignore:
 # https://docs.ansible.com/ansible/devel/dev_guide/developing_collections_distributing.html#ignoring-files-and-folders
   - .gitignore
