--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,7 +1,7 @@
 # See https://docs.ansible.com/ansible/latest/dev_guide/collections_galaxy_meta.html
 
 namespace: tosin2013
-name: openshift-virt-ansible
+name: openshift_virt_ansible
 version: 0.1.0
 readme: README.md
 authors:
@@ -13,10 +13,10 @@ tags:
 # tags are all lower-case, no spaces, no dashes.
   - openshift-virtualization
   - kubevirt
-repository: https://github.com/ansible-collections/tosin2013.openshift-virt-ansible
-#documentation: https://github.com/ansible-collection-migration/tosin2013.openshift-virt-ansible/tree/main/docs
-homepage: https://github.com/ansible-collections/tosin2013.openshift-virt-ansible
-issues: https://github.com/ansible-collections/tosin2013.openshift-virt-ansible/issues
+repository: https://github.com/ansible-collections/tosin2013.openshift_virt_ansible
+#documentation: https://github.com/ansible-collection-migration/tosin2013.openshift_virt_ansible/tree/main/docs
+homepage: https://github.com/ansible-collections/tosin2013.openshift_virt_ansible
+issues: https://github.com/ansible-collections/tosin2013.openshift_virt_ansible/issues
 build_ignore:
 # https://docs.ansible.com/ansible/devel/dev_guide/developing_collections_distributing.html#ignoring-files-and-folders
   - .gitignore
