--- a/roles/configure-openshift-virt/tasks/main.yml
+++ b/roles/configure-openshift-virt/tasks/main.yml
@@ -1,2 +1,5 @@
 ---
 # tasks file for configure-openshift-virt
+- name: Install and configure OpenShift Data Foundation
+  ansible.builtin.include_tasks: configure-odf.yaml
+  tags: configure_odf
