--- a/roles/configure_openshift_virt/tasks/main.yml
+++ b/roles/configure_openshift_virt/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 # tasks file for configure-openshift-virt
 - name: Install and configure OpenShift Data Foundation
-  ansible.builtin.include_tasks: configure-odf.yaml
+  ansible.builtin.include_tasks: configure-odf.yml
   tags: configure_odf
