--- a/roles/configure_openshift_virt/tasks/configure-odf.yml
+++ b/roles/configure_openshift_virt/tasks/configure-odf.yml
@@ -1,5 +1,5 @@
 - name: Configure openshift-storage namespace
-  k8s:
+  kubernetes.core.k8s:
     definition: "{{ lookup('template', 'openshift-storage-namespace.yml') }}"
     state: present
   tags: configure_odf
