--- a/roles/configure_openshift_virt/defaults/main.yml
+++ b/roles/configure_openshift_virt/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
 # defaults file for configure-openshift-virt
 odf_operator_channel: "stable-4.14"
+
+openshift_username: "admin"
+openshift_password: "password"
