--- a/roles/configure_openshift_virt/tasks/login-ocp.yml
+++ b/roles/configure_openshift_virt/tasks/login-ocp.yml
@@ -1,5 +1,5 @@
 - name: Log in (obtain access token)
-  community.kubernetes.k8s_auth:
+  kubernetes.core.k8s_auth:
     username: "{{ openshift_username }}"
     password: "{{ openshift_password }}"
   register: k8s_auth_results 
